<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customer_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    tools:context="com.oa.wanyu.activity.Customer.CustomerAddActivity">

    <RelativeLayout
        android:id="@+id/sqll"
        android:layout_width="match_parent"
        android:layout_height="48dp">


        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@mipmap/back_img" />

        <TextView
            android:id="@+id/sq_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="客户管理"
            android:textColor="@color/color_232323"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="确定"
            android:textColor="@color/color_3dacfe"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sqll"
        android:background="@color/color_cbcbcb" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.oa.wanyu.myutils.CircleImg
                android:id="@+id/add_head_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@mipmap/add_img_head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/sex"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/sex_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/add_customer_bg"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="男"
                        android:textColor="@color/color_000000"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/sanjiao" />
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/age"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="0"
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/phone1"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/phone1_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:hint="必填"
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/phone2"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/phone2_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:hint="选填"
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/live"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/live_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/way"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/way_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/like"
                    android:textColor="@color/color_a0a0a0"
                    android:textSize="12sp" />

                <EditText
                    android:gravity="left"
                    android:id="@+id/like_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/add_customer_bg"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
