<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    tools:context="com.oa.wanyu.fragment.MessageFragment">

    <TextView
        android:id="@+id/me"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="消息"
        android:textColor="@color/color_232323"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:background="@color/color_b9b9b9"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="18dp"
            android:text="消息"
            android:textColor="@color/color_232323"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_centerInParent="true"
            android:background="@drawable/register_bg"
            android:gravity="center"
            android:text="@string/register_tv"
            android:textColor="@color/color_fefefe"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/title_two_ll"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/history_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_tv"
                        android:textColor="@color/color_3dfefc"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/history_tv_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/history_tv"
                        android:layout_centerHorizontal="true"
                        android:text="200"
                        android:textColor="@color/color_3dfefc"
                        android:textSize="15sp" />
                </RelativeLayout>

            </RelativeLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/color_ffffff" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/today_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_tv"
                        android:textColor="@color/color_ffffff"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/today_tv_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/today_tv"
                        android:layout_centerHorizontal="true"
                        android:text="260"
                        android:textColor="@color/color_ffffff"
                        android:textSize="15sp" />
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/title_two_ll"
            android:background="@color/color_ffffff" />


    </RelativeLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/me"
        android:background="@color/color_ffffff">

        <ListView
            android:id="@+id/listview_notify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/color_ffffff"
            android:dividerHeight="8dp"
            android:scrollbars="none">

        </ListView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <RelativeLayout
        android:id="@+id/no_data_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/me"
        android:background="@color/color_ffffff"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/no_data" />

        <TextView
            android:id="@+id/no_mess_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_img"
            android:layout_centerHorizontal="true"
            android:text="空空如也"
            android:textColor="@color/color_0e3247"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
